# nonogram

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.md  main.cpp  nonogram.md
dependencies/glad/: glad.h
src/: benchmarking.h  config.h  glad.c  main.cpp  nonogram.cpp  nonogram.h  permutationVector.h  resource.rc
src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
testing/RandomGeneration/: BenchmarkingBooleanGen.cpp  README.md  RandomnessBoolGen.cpp  a.out
testing/permuting/: permutationVector.h  permutationVectorTest.cpp
testing/rcFiletesting/: readme.md  resource.res
testing/statistics/: BetterIntTypeBench.xlsx  CompleteBenchmark.xlsx  DFSnLogicBench.xlsx  SampleSizeThoughts.xlsx  resultsRunCoverageSmallNonograms.xlsx
